--- a/controllers/summoners/_list_toolbar.htm
+++ b/controllers/summoners/_list_toolbar.htm
@@ -2,6 +2,9 @@
     <a href="<?= Backend::url('stu177/leagueTracker/summoners/create') ?>" class="btn btn-primary oc-icon-plus">
         Add Summoner
     </a>
+    <a href="#" class="btn btn-primary oc-icon-refresh">
+        Get Matches
+    </a>
     <button
         class="btn btn-default oc-icon-trash-o"
         disabled="disabled"
