--- a/controllers/matches/_list_toolbar.htm
+++ b/controllers/matches/_list_toolbar.htm
@@ -1,4 +1,7 @@
 <div data-control="toolbar">
+    <a href="#" class="btn btn-primary oc-icon-refresh">
+        Retrieve Matches
+    </a>
     <button
         class="btn btn-default oc-icon-trash-o"
         disabled="disabled"
