--- a/controllers/matches/_list_toolbar.htm
+++ b/controllers/matches/_list_toolbar.htm
@@ -1,7 +1,9 @@
 <div data-control="toolbar">
-    <a href="#" class="btn btn-primary oc-icon-refresh">
+    <button
+        class="btn btn-primary oc-icon-refresh"
+        data-request="onGetMatches">
         Retrieve Matches
-    </a>
+    </button>
     <button
         class="btn btn-default oc-icon-trash-o"
         disabled="disabled"
