--- a/controllers/summoners/update.htm
+++ b/controllers/summoners/update.htm
@@ -14,6 +14,7 @@
         <div class="form-buttons layout-item fix">
             <div class="loading-indicator-container">
                 <button type="submit" data-request="onSave" data-hotkey="ctrl+s, cmd+s" data-load-indicator="Updating" class="btn btn-primary">Update</button>
+                <button type="submit" data-request="onSave" data-request-data="close:true" data-hotkey="ctrl+s, cmd+s" data-load-indicator="Updating" class="btn">Update & Close</button>
                 <span class="btn-text">
                     or <a href="<?= Backend::url('stu177/leagueTracker/summoners') ?>">Cancel</a>
                 </span>
